# 6a187bac347d02b594a52faa-titanic-survivors

./: docker-compose.dev.yml  docker-compose.yml
.claude/: CLAUDE.md  settings.json
.github/workflows/: build.yml  deploy.yml
api/: .dockerignore  .env.test  .gitignore  Dockerfile.dev  Dockerfile.installer  Dockerfile.prod  Dockerfile.test  Dockerfile.test.dockerignore  README-test.md  README.md  pyproject.toml  pytest.ini  requirements-test.txt  tiny_math.py
api/app/: __init__.py  deps.py  main.py  middleware.py  types.py
api/app/api/: health.py  routes.py  schemas.py
api/app/core/: config.py  errors.py  logging_config.py
api/app/ml/: model.py
api/tests/: conftest.py  testWrapperTimeout.py
api/tests/integration/: conftest.py  test_app_factory.py  test_uvicorn_boot.py
api/tests/unit/: test_config.py  test_errors.py  test_health.py  test_logging_config.py  test_middleware.py  test_smoke.py
evals/: history.json
evals/titanic_survival_predictor/: .dockerignore  Dockerfile.test  (+3 more)
titanic_survival_predictor/: Dockerfile  Dockerfile.dev  Dockerfile.installer  Dockerfile.test  Dockerfile.test.dockerignore  TEST_DEPENDENCY_AUDIT.md  requirements-dev.txt  requirements-test.txt  requirements.in  requirements.txt  titanic.py
web/: .dockerignore  .env  .env.test  .eslintrc.cjs  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.installer  Dockerfile.prod  Dockerfile.test  Dockerfile.test.dockerignore  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vite.playwright.config.ts  vitest.config.ts
(+16 files in other folders)
